PROJECT(ACNG CXX C)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/source)

ADD_EXECUTABLE(acngtool main.cc ${NONOSSLSRCS})
SET_TARGET_PROPERTIES(acngtool PROPERTIES COMPILE_FLAGS "${ACNG_CXXFLAGS_COMMON}")
TARGET_LINK_LIBRARIES(acngtool acngstuff ${BaseNetworkLibs} ${CompLibs} ${SSL_LIB_LIST} ${EXTRA_LIBS_ACNGTOOL})
INSTALL(TARGETS acngtool DESTINATION ${LIBDIR})

